--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        nav_version = '2.5.0'
-    }
-
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.0'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,8 +22,4 @@ allprojects {
             url 'https://jitpack.io'
         }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
